[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Bomb.gd" type="Script" id=1]
[ext_resource path="res://Player/PlayerShader1.tres" type="Material" id=2]
[ext_resource path="res://Resources/Particles/effect9.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="Animation" id=2]
resource_name = "spin2win"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="Bomb" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.513726 )
material = ExtResource( 2 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( 0, -25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spin2win"
anims/spin2win = SubResource( 2 )

[node name="TimerFire" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="TimerDying" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="TimerFire" to="." method="_on_TimerFire_timeout"]
[connection signal="timeout" from="TimerDying" to="." method="_on_TimerDying_timeout"]
